--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -1,3 +1,36 @@
+
+.day {
+  --pink: #FD665E;
+  --main-color: #000;
+  --halfmoon-color: #444;
+  --dream-project-background: #F9F9F9;
+}
+
+.night {
+  --pink: #008000;
+  --main-color: #F00;
+  --halfmoon-color: #FF0;
+  --body-background: #000;
+}
+
+body {
+  background-color: var(--body-background);
+}
+
+.buttons {
+  color: var(--main-color);
+  border: none;
+  background-color: var(--pink);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.logo {
+  width: 62px;
+  height: 28px;
+  fill: var(--pink);
+}
+
 header {
   display: flex;
   width: 1440px;
@@ -9,8 +42,6 @@ header {
 .header__logo {
   margin-left: 50px;
   margin-right: 32px;
-  width: 62px;
-  height: 28px;
 }
 
 .header__menu {
@@ -44,6 +75,7 @@ header {
   cursor: pointer;
   width: 15px;
   height: 20px;
+  fill: var(--halfmoon-color);
 }
 
 .header__buttons__sign--in {
@@ -51,6 +83,7 @@ header {
   width: 60px;
   height: 40px;
   background-color: #FFF;
+  color: #585858;
   border: none;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -58,15 +91,10 @@ header {
 }
 
 .header__buttons__sign--up {
-  color: #FFF;
-  border: none;
-  background-color: #FD665E;
-  border-radius: 4px;
   width: 99px;
   height: 48px;
   font-family: "Roboto", serif;
   font-size: 14px;
-  cursor: pointer;
 }
 
 .dreamhouse__title-container {
@@ -79,10 +107,11 @@ header {
   font-family: "Merriweather", serif;
   line-height: 112px;
   letter-spacing: -2px;
+  font: (--main-color)
 }
 
 .word--color {
-  color: #FD665E;
+  color: var(--pink);
 }
 
 .dreamhouse {
@@ -114,10 +143,6 @@ header {
   width: 179px;
   height: 56px;
   font-size: 14px;
-  color: #FFF;
-  background-color: #FD665E;
-  border: none;
-  border-radius: 4px;
 }
 
 .dreamhouse__photo {
@@ -199,21 +224,21 @@ header {
 .archmove__content__button {
   width: 205px;
   height: 56px;
-  background-color: #FD665E;
-  color: #FFF;
-  border-radius: 4px;
-  border: none;
   font-family: "Roboto", serif;
   font-size: 14px;
   margin-top: 50px;
   margin-left: 90px;
 }
 
+.container {
+  width: 1440px;
+  background-image: linear-gradient(180deg,#0D0D0D, #F9F9F9);
+}
+
 .dream-project {
   width: 1440px;
   height: 812px;
   margin-top: 64px;
-  background-color: #F9F9F9;
   display: flex;
 }
 
@@ -238,10 +263,6 @@ header {
 .dream-project__content__button {
   width: 205px;
   height: 56px;
-  background-color: #FD665E;
-  color: #FFF;
-  border-radius: 4px;
-  border: none;
   font-family: "Roboto", serif;
   font-size: 14px;
   margin-top: 64px;
@@ -253,7 +274,6 @@ header {
   width: 1440px;
   height: 208px;
   align-items: center;
-  background-color: #F9F9F9;
   justify-content: space-between;
 }
 
@@ -274,8 +294,6 @@ header {
 }
 
 .footer__logo {
-  width: 62px;
-  height: 28px;
   margin-right: 180px;
 }
 
