--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
@@ -22,15 +22,19 @@
 }
 
 body {
-  max-width: 1440px;
-  min-width: 731px;
-  height: 100%;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   color: var(--color-text);
+}
+
+.wrapper {
+  max-width: 1440px;
+  min-width: 720px;
+  height: 100%;
+  margin: 0 auto;
+  background-color: var(--color-background);
 }
 
 .logo {
@@ -43,13 +47,6 @@ body {
   height: 20px;
   fill: var(--color-text);
 }
-
-/* .sun {
-  width: 24px;
-  height: 24px;
-  fill: var(--color-text);
-  display: none;
-} */
 
 .icon:hover {
   fill: var(--color-red);
@@ -64,6 +61,7 @@ body {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
+  flex-wrap: wrap;
   box-sizing: border-box;
   background-color: var(--color-background);
 }
@@ -74,6 +72,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .header__menu {
@@ -202,7 +201,7 @@ body {
 
 .main__build-room_picture {
   margin-top: 40px;
-  width: 1340px;
+  width: 92%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -301,7 +300,7 @@ body {
 
 .main__realize-dream {
   margin-top: 64px;
-  width: 1440px;
+  width: 100%;
   background: linear-gradient(0deg, rgb(249, 249, 249, .6) 12%, rgba(249, 249, 249, 0) 100%);
   display: flex;
   flex-direction: row;
@@ -359,4 +358,77 @@ body {
 
 .footer_logo {
   margin-right: 166px;
+}
+
+@media (max-width: 800px) {
+
+  .wrapper, .header, .main, .footer {
+    width: 100%;
+  }
+
+  .header {
+    padding-left: 0;
+    padding-right: 0;
+    justify-content: center;
+  }
+
+  .main__dream-house {
+    width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
+    flex-direction: column;
+  }
+
+  .main__dream-house_name {
+    width: 600px;
+    font-size: 80px;
+  }
+
+  .dream-house__text {
+    width: 75%;
+  }
+
+  .dream-house__img {
+    width: 92%;
+  }
+
+  .build-room__img {
+    margin-bottom: 20px;
+  }
+
+  .main__archmove {
+    margin-top: 80px;
+    margin-left: 30px;
+  }
+
+  .main__archmove_info {
+    flex-wrap: wrap;
+  }
+
+  .list_text {
+    width: 70%;
+  }
+
+  .main__realize-dream {
+    flex-wrap: wrap;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .footer__menu, .footer_logo {
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-bottom: 30px;
+  }
+
+  .footer__menu-link {
+    font-size: 18px;
+  }
+
+  .footer_logo {
+    margin-right: 60px;
+  }
 }
