--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
@@ -281,7 +281,7 @@ body {
   width: 205px;
   height: 56px;
   background-color: var(--color-red);
-  color: var(--color-text);
+  color: var(--color-background);
   font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 14px;
