--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
@@ -14,7 +14,7 @@
   --background-color: #FFF;
   --text-color: #000;
   --button-text-color: #FFF;
-  --navigation-text-color: #444;
+  --footer-text-color: #444;
   --button-empty-text-color: #585858;
   --footer-line: #F0F0F0;
   --footer-gradient: linear-gradient(180deg, #F9F9F9 22.12%, rgba(249, 249, 249, 0) 100%);
@@ -24,7 +24,7 @@
   --background-color: #000;
   --text-color: #FFF;
   --button-text-color: #000;
-  --navigation-text-color: #FFF;
+  --footer-text-color: #FFF;
   --button-empty-text-color: #FFF;
   --footer-line: #1C1C1C;
   --footer-gradient: linear-gradient(180deg, #0D0D0D 22.12%, rgba(249, 249, 249, 0) 100%);
@@ -42,127 +42,53 @@ body {
   background-color: var(--background-color);
 }
 
-.page-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-
-.page-container--large {
-  max-width: 1400px;
-}
-
-.page-section {
-  padding: 1rem 0;
-}
-
-.page-link {
-  text-decoration: none;
-}
-
-.page-list {
-  list-style: none;
-}
-
-.page-logo__icon {
-  height: 65px;
-  width: 65px;
-  fill: var(--accent-color);
-}
-
-.page-navigation {
-  text-align: center;
-  font-size: .875rem;
-}
-
-.page-navigation__link {
-  padding: 1rem;
-  font-family: var(--primary-font);
-  color: var(--navigation-text-color);
-}
-
-.page-navigation__link:hover {
-  color: var(--accent-color);
-}
-
-.page-navigation__item {
-  padding: .5rem;
-  white-space: nowrap;
-}
-
-.button {
-  border: 0;
-  background: 0;
-  cursor: pointer;
-  font-family: var(--primary-font);
-  padding: 1rem 1.5rem;
-  border-radius: 5px;
-  font-size: .875rem;
-}
-
-.button--empty {
-  color: var(--button-empty-text-color);
-}
-
-.button--empty:hover {
-  color: var(--accent-color);
-}
-
-.button--full {
-  color: var(--button-text-color);
-  background-color: var(--accent-color);
-  font-weight: 900;
-}
-
-.button--full:hover {
-  background-color: var(--accent-color-light);
-}
-
-.button--toggler__icon {
-  height: 20px;
-  width: 20px;
-  fill: var(--gray-color-dark);
-}
-
-.button--toggler:hover .button--toggler__icon {
-  fill: var(--accent-color);
-}
-
-.title {
-  font-family: var(--secondary-font);
-  font-weight: 700;
-  color: var(--text-color);
-  line-height: 1;
-  font-size: 3rem;
-}
-
-.title--accent {
-  color: var(--accent-color);
-}
-
-.title--large {
-  font-size: 7rem;
-}
-
 .header {
   padding: 1rem 0;
 }
 
 .header__container {
   display: flex;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .header__logo {
   margin-right: 3rem;
 }
 
+.header__icon {
+  height: 65px;
+  width: 65px;
+  fill: var(--accent-color);
+}
+
 .header__navigation {
   display: flex;
   align-items: center;
+  text-align: center;
+  font-size: .875rem;
 }
 
 .header__list {
   display: flex;
+  list-style: none;
+}
+
+.header__link {
+  padding: 1rem;
+  font-family: var(--primary-font);
+  color: var(--navigation-text-color);
+  text-decoration: none;
+}
+
+.header__link:hover {
+  color: var(--accent-color);
+}
+
+.header__list-item {
+  padding: .5rem;
+  white-space: nowrap;
 }
 
 .header__actions {
@@ -171,17 +97,84 @@ body {
   align-items: center;
 }
 
-.header__button {
+.header__toggler-button {
+  border: 0;
+  cursor: pointer;
+  font-family: var(--primary-font);
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  font-size: .875rem;
+  background: 0;
   margin-right: 1rem;
+}
+
+.header__toggler-button-icon {
+  height: 20px;
+  width: 20px;
+  fill: var(--gray-color-dark);
+}
+
+.header__toggler-button:hover .header__toggler-button-icon {
+  fill: var(--accent-color);
+}
+
+.header__empty-button {
+  border: 0;
+  cursor: pointer;
+  font-family: var(--primary-font);
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  font-size: .875rem;
+  background: 0;
+  margin-right: 1rem;
+  color: var(--button-empty-text-color);
+}
+
+.header__empty-button:hover {
+  color: var(--accent-color);
+}
+
+.header__full-button {
+  border: 0;
+  cursor: pointer;
+  font-family: var(--primary-font);
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  font-size: .875rem;
+  background: 0;
+  margin-right: 1rem;
+  color: var(--button-text-color);
+  background-color: var(--accent-color);
+  font-weight: 900;
+}
+
+.header__full-button:hover {
+  background-color: var(--accent-color-light);
 }
 
 .main-section {
   margin-bottom: 2rem;
 }
 
+.main-section__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  margin-bottom: 2rem;
+}
+
 .main-section__title {
-  margin-bottom: 3rem;
   max-width: 800px;
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  color: var(--text-color);
+  line-height: 1;
+  font-size: 7rem;
+  margin-bottom: 2rem;
+}
+
+.main-section__title--accent {
+  color: var(--accent-color);
 }
 
 .main-section__hero-container {
@@ -211,7 +204,40 @@ body {
   height: auto;
 }
 
+.main-section__full-button {
+  border: 0;
+  cursor: pointer;
+  font-family: var(--primary-font);
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  font-size: .875rem;
+  background: 0;
+  margin-right: 1rem;
+  color: var(--button-text-color);
+  background-color: var(--accent-color);
+  font-weight: 900;
+}
+
+.main-section__full-button:hover {
+  background-color: var(--accent-color-light);
+}
+
 .gallery-section {
+  margin-bottom: 2rem;
+}
+
+.gallery-section__title {
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  color: var(--text-color);
+  line-height: 1;
+  font-size: 3rem;
+}
+
+.gallery-section__container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 1rem;
   margin-bottom: 2rem;
 }
 
@@ -243,6 +269,20 @@ body {
 }
 
 .features-section__title {
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  color: var(--text-color);
+  line-height: 1;
+  font-size: 3rem;
+}
+
+.features-section__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.features-section__title {
   margin-bottom: 2rem;
 }
 
@@ -263,6 +303,10 @@ body {
 .features-section__description {
   font-family: var(--primary-font);
   color: var(--black-color);
+}
+
+.features-section__list {
+  list-style: none;
 }
 
 .features-section__list-item {
@@ -303,6 +347,12 @@ body {
   background: var(--footer-gradient);
 }
 
+.footer-section__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
 .footer-section__main {
   display: flex;
   align-items: center;
@@ -324,6 +374,11 @@ body {
 
 .footer-section__title {
   width: 600px;
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  color: var(--text-color);
+  line-height: 1;
+  font-size: 3rem;
   margin-bottom: 2rem;
 }
 
@@ -337,15 +392,76 @@ body {
   width: 100%;
 }
 
+.footer-section__full-button {
+  border: 0;
+  cursor: pointer;
+  font-family: var(--primary-font);
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  font-size: .875rem;
+  background: 0;
+  margin-right: 1rem;
+  color: var(--button-text-color);
+  background-color: var(--accent-color);
+  font-weight: 900;
+}
+
+.footer-section__full-button:hover {
+  background-color: var(--accent-color-light);
+}
+
 .footer-section__list {
+  list-style: none;
   display: flex;
   font-weight: 900;
   font-size: .75rem;
-  color: var(--gray-color);
+}
+
+.footer-section__link {
+  padding: 1rem;
+  text-decoration: none;
+  color: var(--footer-text-color);
+  font-family: var(--primary-font);
+}
+
+.footer-section__link:hover {
+  color: var(--accent-color);
 }
 
 .footer-section__logo {
   margin-left: auto;
+}
+
+.footer-section__icon {
+  height: 65px;
+  width: 65px;
+  fill: var(--accent-color);
+}
+
+@media (prefers-color-scheme: light) {
+
+  :root {
+    --background-color: #FFF;
+    --text-color: #000;
+    --button-text-color: #FFF;
+    --navigation-text-color: #444;
+    --button-empty-text-color: #585858;
+    --footer-line: #F0F0F0;
+    --footer-gradient: linear-gradient(180deg, #F9F9F9 22.12%, rgba(249, 249, 249, 0) 100%);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+
+  [data-theme="dark"] {
+    --background-color: #000;
+    --text-color: #FFF;
+    --button-text-color: #000;
+    --navigation-text-color: #FFF;
+    --button-empty-text-color: #FFF;
+    --footer-line: #1C1C1C;
+    --footer-gradient: linear-gradient(180deg, #0D0D0D 22.12%, rgba(249, 249, 249, 0) 100%);
+  }
 }
 
 
@@ -362,12 +478,14 @@ body {
 
 @media (max-width: 991.98px) {
 
-  .title {
-    font-size: 2rem;
+  .main-section__title {
+    font-size: 5rem;
   }
 
-  .title--large {
-    font-size: 5rem;
+  .gallery-section__title,
+  .features-section__title,
+  .footer-section__title {
+    font-size: 2rem;
   }
 
   .header__container {
@@ -461,8 +579,25 @@ body {
 
 @media (max-width: 575.98px) {
 
-  .title--large {
+  .main-section__title {
     font-size: 3rem;
+  }
+
+  .gallery-section__title,
+  .features-section__title,
+  .footer-section__title {
+    font-size: 1.5rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .header__full-button,
+  .header__empty-button,
+  .header__toggler-button,
+  .main-section__full-button,
+  .footer-section__full-button {
+    width: 100%;
+    margin: 0;
   }
 
   .header__list {
@@ -514,5 +649,9 @@ body {
 
   .footer-section__list {
     flex-direction: column;
+  }
+
+  .footer-section__list-item {
+    padding: 1rem;
   }
 }
